* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Mar 2017 Released 1.5.29 version
* Update translations from zanata (de, pl updated)
* Add a “--version” command line option to emoji-picker
* itb_emoji.py: Also read emoji-test.txt (from unicode.org)
* emoji-picker: Set default font to first available in ['Noto Color Emoji', 'Emoji One', 'Symbola']
* Small parsing improvement of emoji-sequences.txt
* Add support to either use U+FE0F VARIATION SELECTOR-16 in emoji sequences or not
* emoji-picker: Show “∅ Search produced empty result.” when nothing matches in a search

* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Mar 2017 Released 1.5.28 version
* Allow query by code point even if Python’s unicodedata.name() does not know the character
* Also read names from emoji-sequences.txt and emoji-zwj-sequences.txt
* itb_emoji.py: Also read emoji-sequences.txt (from unicode.org)
* Fix positioning of info popover (fix a typo in an “if” statement)
* Show emoji properties from unicode.org when debugging is on
* itb_emoji.py: Also read emoji-zwj-sequences.txt (from unicode.org)
* Also use the emoji properties from unicode.org to decide whether to offer a lookup on emojipedia
* Use property “Emoji_Modifier_Base” from emoji-data.txt to check whether an emoji supports skin tones
* itb_emoji.py: Also read emoji-data.txt (from unicode.org)
* Tentative skin tone support for families
* Improve skin tone support: make it work for professions (roles) as well
* Make skin tone popover scrollable and limit its maximum size

* Author: Mike FABIAN <mfabian@redhat.com>
* 17 Mar 2017 Released 1.5.27 version
* Update translations from zanata (pl, uk updated)
* emoji-picker: make skin tone selection work for gendered emoji

* Author: Mike FABIAN <mfabian@redhat.com>
* 16 Mar 2017 Released 1.5.26 version
* Update translations from zanata (de updated)
* Fix display of warning message when a dictionary is not installed.
* Emulate xdg.BaseDirectory.save_data_path() on systems which lack pyxdg